added modal for the creation of files inside folders. Made it possible to click on the file and see it in the window. added some validation to folder and file modal windows

--- a/frontend/src/components/FolderModal/FolderModal.module.css
+++ b/frontend/src/components/FolderModal/FolderModal.module.css
@@ -99,3 +99,11 @@
     background-color: #cccccc;
     cursor: not-allowed;
 }
+
+.error {
+    color: #e74c3c;
+    font-size: 0.875rem;
+    margin-top: 5px;
+    margin-bottom: 0;
+    font-weight: 500;
+}
