--- a/frontend/src/pages/Main/MainPage.module.css
+++ b/frontend/src/pages/Main/MainPage.module.css
@@ -1,3 +1,12 @@
 .mainPage{
     display: flex;
+    justify-content: center;
+    width: 1024px;
+    margin-top: 20px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.contentArea {
+    width: 800px;
 }
